# vico

./: .env  .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  SUMD.md  SUMR.md  app.doql.less  goal.yaml  project.sh  pyproject.toml
docs/: README.md  architecture.md  capsule-format.md  commands.md  examples.md  getting-started.md  intent-contracts.md  llm-orchestration.md  llm-review.md  mcp-service.md  roadmap.md  runtime-and-reports.md  verification.md
examples/: run_examples.py  scientific_calculator_demo.py
examples/backend_service/.tmp_nexu_run/: README.md
examples/backend_service/.tmp_nexu_run/app/: users.py
examples/frontend_view/: README.md
examples/frontend_view/.tmp_nexu_run/: README.md
examples/frontend_view/.tmp_nexu_run/fixtures/: menu_items.yaml
examples/frontend_view/src/: menu_icons.py
examples/mcp_service/: README.md
examples/mcp_service/.tmp_nexu_run/: README.md
examples/mcp_service/src/: demo.py
examples/vertical_slice/: README.md
examples/vertical_slice/.tmp_nexu_run/: intract.yaml  nexu.yaml
examples/vertical_slice/.tmp_nexu_run/src/: flow.py
project/: README.md  analysis.toon.yaml  calls.mmd  calls.toon.yaml  calls.yaml  compact_flow.mmd  context.md  duplication.toon.yaml  evolution.toon.yaml  flow.mmd  index.html  logic.pl  map.toon.yaml  mermaid.export  planfile-tickets.yaml  project.toon.yaml  prompt.txt
src/nexu/: __init__.py  blueprint.py  bundle.py  capsule.py  cli.py  config.py  drift.py  export_prompt.py  files.py  init_project.py  iterate.py  journal.py  llm.py  mcp_server.py  orchestrate.py  paths.py  plan.py  promote.py  report.py  review.py  runtime.py  verify.py
src/vico/: __init__.py  blueprint.py  capsule.py  cli.py  diff.py  export_prompt.py  files.py  freeze.py  git.py  intract.py  iterate.py  models.py  paths.py  promote.py  status.py  verify.py
testql-scenarios/: generated-cli-tests.testql.toon.yaml
tests/: test_capsule_flow.py  test_capsule_next_stage.py  test_capsule_runtime_report.py  test_intract.py  test_models.py  test_nexu.py  test_orchestration_mcp.py  test_review_bundle.py  test_vico.py
(+91 files in other folders)
